# Lucchesi_Carlo_Elaborato_Laboratorio

./: 0Linux_Logo.ppm  BitmapImage.cpp  BitmapImage.h  CMakeLists.txt  CommonKernelFactory.h  ImageIO.h  ImageLoader.h  ImageSaver.h  KernelProcessing.cpp  KernelProcessing.h  NetpbmIO.cpp  NetpbmIO.h  NetpbmLoader.cpp  NetpbmLoader.h  NetpbmSaver.cpp  NetpbmSaver.h  UML.mdj  main.cpp
Unit_Test/: ActualKernelProcessing.cpp  BitImmageSuite.cpp  BitmapImageTests.cpp  CMakeLists.txt  KernelProcessTests.cpp  KernelProcessingSuite.cpp  Logo.pgm  Mint_Logo.pam  NetpbmLoaderSuite.cpp  NetpbmLoadingSuite.cpp  NetpbmSaverSuite.cpp  NetpbmSavingSuite.cpp  NetpbmSuite.cpp  test.pgm  test.ppm
Unit_Test/lib/googletest/: README.md
Unit_Test/lib/googletest/test/: gtest_unittest.cc
